# async-python-sprint-5

./: .env.template  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: app-testing.yml
deploy/: logstash.conf
deploy/filebeat/: filebeat.yaml  filebeat.yml
dockerization/: Dockerfile-db  Dockerfile-server  Dockerfile-server-test
src/: main.py  models.py
src/api/v1/: auth.py  base.py  file_storage.py
src/config/: config.py  constants.py  logger.py
src/db/: db.py
src/files/: 51a17787-d9df-417b-9bc3-a9d896cd59b0
src/helpers/: raising_http_excp.py  utils.py
src/migrations/: env.py
src/migrations/versions/: 2023_02_02_1209-b74f470eeb6c_init.py  2023_02_02_2258-bcd2b03edb60_init.py
src/nginx/: default.conf
src/schemas/: file.py
src/services/: base.py  crud.py  file.py  user_manager.py
src/tests/: conftest.py  test_api.py
