[tool.poetry]
name = "async-python-sprint-5"
version = "0.1.0"
description = ""
authors = ["Pavel Korsakov <PKorsakov@datafort.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
orjson = "^3.8.5"
sqlalchemy = "^2.0.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.2"
fastapi-users-db-sqlalchemy = "^4.0.4"
httpx = "^0.23.3"


[tool.poetry.group.test.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 99
multi_line_output = 0
skip = ['.git',
      '.mypy_cache',
      '.venv',
      'venv',
      'migrations', ]

[tool.mypy]
python_version = "3.10"
exclude = "tests/|venv/|env.py|migrations"
